aws/loadbalancer-secgroup.tf
resource "aws_security_group" "loadbalancer_sg" {
  name        = "loadbalancer"
  description = "Security group for db servers"
  vpc_id      = "${aws_vpc.logicdesk_network.id}"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "loadbalancer_SG"
  }
}
